# dif

./: .gitattributes  .gitignore  LICENSE  PUBLIC_DOCS.md  README.md
.github/workflows/: ci.yml  release.yml
cli/: .gitignore  Cargo.toml  PLAN.md
cli/crates/dif-cli/: Cargo.toml
cli/crates/dif-cli/assets/: AGENTS.md  CLAUDE.md  cursorrules.txt
cli/crates/dif-cli/assets/claude/skills/dif-author-experiment/: SKILL.md
cli/crates/dif-cli/assets/claude/skills/dif-author-experiment/references/: audiences.md  frontmatter.md  validation-errors.md
cli/crates/dif-cli/assets/claude/skills/dif-conclude-experiment/: SKILL.md
cli/crates/dif-cli/assets/claude/skills/dif-generate-surfaces/: SKILL.md
cli/crates/dif-cli/src/: main.rs
cli/crates/dif-cli/src/cmd/: build.rs  conclude.rs  connect.rs  init.rs  mod.rs  new.rs  qa.rs  scaffold_audiences.rs  validate.rs
cli/crates/dif-core/: Cargo.toml
cli/crates/dif-core/src/: audience.rs  audience_files.rs  bucket.rs  codegen.rs  config.rs  config_edit.rs  context.rs  diag.rs  exclusion.rs  lib.rs  parse.rs  paths.rs  spec.rs  validate.rs  workspace.rs
cli/crates/dif-core/tests/: bucket_fixture.rs
cli/crates/dif-core/tests/fixtures/: bucket_tests.json
scripts/: prepare-release.sh
